--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -15,9 +15,6 @@
         }
     }
      @media (min-width: 0px) and (max-width: 649px) {
-            &__section{
-                 margin: 0 auto;
-                padding: 0;
-            }
+        
         }
 }
